updated about text

--- a/studio.html
+++ b/studio.html
@@ -33,11 +33,11 @@
 
                 <div class="about-section">
                     <div class="about-text">
-                        <p>Lush Rust Studios operates in the liminal space between order and chaos. We are a collective of digital craftsmen, artists, and code poets dedicated to creating experiences that challenge conventional digital boundaries.</p>
+                        <p>Lush Rust Studios is a collective of digital craftsmen, artists, and code poets dedicated to creating experiences, applications, and art that challenge conventional digital boundaries.</p>
                         
-                        <p>Founded in the depths of digital entropy, we embrace the beauty of imperfection and the power of transformation. Our work spans the spectrum from elegant software solutions to experimental digital art installations.</p>
+                        <p>Founded in Venice Beach, we embrace the beauty of imperfection and the power of technology to inspire, soothe, and also agitate. Our work spans the spectrum from elegant software solutions to experimental digital art installations.</p>
                         
-                        <p>We don't just build digital products - we cultivate digital ecosystems where technology and artistry collide.</p>
+                        <p>We don't intend to just build digital products - we cultivate digital ecosystems where technology and artistry collide.</p>
                     </div>
                 </div>
 
