--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
                     <p class="alt-text">Alternative Frequencies</p>
                     <div class="social-links">
                         <a href="#" class="social-link">TWITTER</a>
-                        <a href="#" class="social-link">INSTAGRAM</a>
-                        <a href="#" class="social-link">LINKEDIN</a>
+                        <a href="https://www.instagram.com/lushruststudios?igsh=NTc4MTIwNjQ2YQ==" class="social-link">INSTAGRAM</a>
+                        <a href="https://www.linkedin.com/company/lush-rust-studios/" class="social-link">LINKEDIN</a>
                     </div>
                 </div>
             </div>
