updated studio blurb

--- a/studio.html
+++ b/studio.html
@@ -25,9 +25,9 @@
             <div class="studio-content">
                 <div class="manifesto">
                     <div class="manifesto-text">
-                        <p class="glitch-text">We are the digital alchemists</p>
-                        <p class="glitch-text">Transforming rust into gold</p>
-                        <p class="glitch-text">Where decay meets creation</p>
+                        <p class="glitch-text">digital alchemists</p>
+                        <p class="glitch-text">crafting boutique software</p>
+                        <p class="glitch-text">where decay meets creation</p>
                     </div>
                 </div>
 
