--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <div class="contact-content">
                 <div class="contact-header">
                     <h1 class="glitch-text">TRANSMIT</h1>
-                    <p class="contact-subtitle">Enter the void, leave a message</p>
+                    <p class="contact-subtitle">drop us a line</p>
                 </div>
 
                 <form class="contact-form" id="contactForm">
