--- a/works.html
+++ b/works.html
@@ -23,55 +23,19 @@
             </nav>
 
             <div class="works-grid">
-                <article class="work-item" data-category="software">
+                <article href="https://velvetmetal.net" class="work-item" data-category="software">
                     <div class="work-image">
                         <div class="work-overlay"></div>
                         <div class="work-title">
-                            <h3>Neural Nexus</h3>
-                            <p>AI-Powered Creative Suite</p>
+                            <h3>Velvet Metal</h3>
+                            <p>The Record Pull Reimagined</p>
                         </div>
                     </div>
                 </article>
 
-                <article class="work-item" data-category="art">
-                    <div class="work-image">
-                        <div class="work-overlay"></div>
-                        <div class="work-title">
-                            <h3>Digital Decay</h3>
-                            <p>Generative Art Collection</p>
-                        </div>
-                    </div>
-                </article>
+              
 
-                <article class="work-item" data-category="installation">
-                    <div class="work-image">
-                        <div class="work-overlay"></div>
-                        <div class="work-title">
-                            <h3>Echo Chamber</h3>
-                            <p>Interactive Sound Installation</p>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="work-item" data-category="software">
-                    <div class="work-image">
-                        <div class="work-overlay"></div>
-                        <div class="work-title">
-                            <h3>Rust Garden</h3>
-                            <p>Digital Ecosystem Platform</p>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="work-item coming-soon" data-category="experience">
-                    <div class="work-image">
-                        <div class="work-overlay"></div>
-                        <div class="work-title">
-                            <h3>Void Protocol</h3>
-                            <p>Coming Soon</p>
-                        </div>
-                    </div>
-                </article>
+              
             </div>
         </div>
 
